Fix overflow

--- a/app/assets/stylesheets/components.css.less
+++ b/app/assets/stylesheets/components.css.less
@@ -341,6 +341,7 @@
     float: right;
     font-size: 14px;
     color: #202020;
+    margin-right: 16px;
 }
 
 .list > .list-item--two-lines > span.list-item-primary-action {
@@ -400,6 +401,7 @@
     float: right;
     font-size: 14px;
     color: #202020;
+    margin-right: 16px;
 }
 
 .list > .list-item--three-lines > span.list-item-primary-content > span.list-item-body {
